fix: avoid not showing load-more-transactions button at the bottom

--- a/src/pages/sections/TransactionsSection/style.css
+++ b/src/pages/sections/TransactionsSection/style.css
@@ -5,7 +5,7 @@
 
 .transactions-section--main {
     display: grid;
-    grid-template-rows: max-content max-content max-content auto;
+    grid-template-rows: max-content max-content max-content auto max-content;
     row-gap: 40px;
     
     align-items: baseline;
